--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,11 @@
   "editor.formatOnSave": true,
   "editor.formatOnSaveMode": "modificationsIfAvailable",
   "cmake.configureOnOpen": false,
+  "editor.insertSpaces": true,
   "editor.tabSize": 2,
   "clangd.arguments": [
+    "--completion-style=detailed",
+    "--header-insertion=never",
     "--malloc-trim"
   ],
   "clangd.fallbackFlags": [
