--- a/Dockerfile.minsize
+++ b/Dockerfile.minsize
@@ -1,13 +1,19 @@
+# syntax=docker/dockerfile:1
+
 FROM debian:stable-slim
 
-LABEL org.opencontainers.image.title="Unit (C)"
-LABEL org.opencontainers.image.description="Unofficial build of Unit for Docker."
-LABEL org.opencontainers.image.url="https://github.com/bandogora/nunit-Ceasy"
-LABEL org.opencontainers.image.source="https://github.com/bandogora/nunit-Ceasy"
-LABEL org.opencontainers.image.documentation="https://unit.nginx.org/installation/#docker-images"
+LABEL org.opencontainers.image.title="Loft"
+LABEL org.opencontainers.image.description="A middleware server based on NGIX Unit that exchanges data between IoT devices and Verizon Thingspace"
+LABEL org.opencontainers.image.url="https://github.com/justins-engineering/loft"
+LABEL org.opencontainers.image.source="https://github.com/justins-engineering/loft"
+
+# NGINX Unit URL and version
+ARG nginx_unit_link="https://github.com/nginx/unit"
+ARG nginx_unit_version="1.34.2-1"
 
 ARG prefix="/usr"
 ARG exec_prefix="$prefix"
+ARG src_dir="$exec_prefix/src"
 ARG bin_dir="$exec_prefix/bin"
 ARG include_dir="$prefix/include"
 ARG lib_dir="$exec_prefix/lib"
@@ -20,17 +26,16 @@ ARG log_file="$log_dir/unit.log"
 ARG tmp_dir="/tmp"
 ARG unit_group="unit"
 ARG unit_user="unit"
-ARG unit_clone_dir="$prefix/src/unit"
+ARG unit_clone_dir="$src_dir/unit"
 
 ARG srv_dir="/srv"
 ARG app_assets_dir="$srv_dir/assets"
-ARG app_bin_dir="$bin_dir"
-ARG app_clone_dir="$prefix/src/app"
+ARG app_clone_dir="$src_dir/loft"
 ARG app_src_dir="$app_clone_dir/src"
 ARG app_include_dir="$app_clone_dir/include"
 ARG app_lib_dir="$app_clone_dir/lib"
-ARG app_group="iots"
-ARG app_user="iots"
+ARG app_group="loft"
+ARG app_user="loft"
 ARG app_firmware_dir="$srv_dir/firmware"
 
 ARG ncpu="getconf _NPROCESSORS_ONLN"
@@ -39,7 +44,7 @@ ENV UNIT_RUN_STATE_DIR="$local_state_dir/run/unit"
 ENV UNIT_PID_PATH="$UNIT_RUN_STATE_DIR/unit.pid"
 ENV UNIT_SOCKET="$UNIT_RUN_STATE_DIR/control.unit.sock"
 ENV UNIT_SBIN_DIR="$exec_prefix/sbin"
-ENV DEB_CFLAGS_MAINT_APPEND="-Wp,-D_FORTIFY_SOURCE=2 -march=native -fPIC"
+ENV DEB_CFLAGS_MAINT_APPEND="-Wp,-D_FORTIFY_SOURCE=2 -march=native -mtune=native -fPIC"
 ENV DEB_LDFLAGS_MAINT_APPEND="-Wl,--as-needed -pie"
 ENV DEB_BUILD_MAINT_OPTIONS="hardening=+all,-pie"
 
@@ -56,7 +61,7 @@ ARG unit_config_args=\
 --sbindir=$UNIT_SBIN_DIR \
 --includedir=$include_dir \
 --libdir=$lib_dir \
---modulesdir=$modules_dir \
+--modulesdir=$lib_dir/modules \
 --datarootdir=$data_root_dir \
 --mandir=$man_dir \
 --localstatedir=$local_state_dir \
@@ -69,38 +74,35 @@ ARG unit_config_args=\
 
 RUN set -x \
   && mkdir -p \
-    $app_src_dir \
     $app_include_dir \
     $app_lib_dir \
     $app_clone_dir/config \
-    $app_clone_dir/modules/jsmn \
-    $app_clone_dir/modules/nibble-and-a-half \
-    /docker-entrypoint.d \
-    $app_assets_dir/images \
-    $app_assets_dir/javascripts \
-    $app_assets_dir/stylesheets
+    $app_firmware_dir \
+    /docker-entrypoint.d
+
+# Copy module source files
+COPY --link ./modules/ "$app_clone_dir"/modules
+
 # Copy app source files
-COPY --link ./src/* "$app_src_dir"
-COPY --link ./include/* "$app_include_dir"
+COPY --link ./src/ "$app_src_dir"
+COPY --link ./include/config.h "$app_include_dir"
 COPY --link ./Makefile "$app_clone_dir"
-COPY --link ./modules/jsmn/* "$app_clone_dir"/modules/jsmn
-COPY --link ./modules/nibble-and-a-half/* "$app_clone_dir"/modules/nibble-and-a-half
-COPY --link ./assets/*.html "$app_assets_dir"
-COPY --link ./assets/images/* "$app_assets_dir/images"
-COPY --link ./assets/javascripts/* "$app_assets_dir/javascripts"
-COPY --link ./assets/stylesheets/* "$app_assets_dir/stylesheets"
+
+# Copy app assets
+COPY --link ./assets/ "$app_assets_dir"
+
 # Copy initial config
 COPY --link config/config.json /docker-entrypoint.d/
 
 # Copy the default entrypoint
 COPY --link ./docker-entrypoint.sh /usr/local/bin/
 
-RUN --mount=type=secret,id=vzw_secrets.h set -x \
+RUN --mount=type=secret,id=vzw_secrets.h set -ex \
 # Install dependencies
   && apt-get update \
   && apt-get install --no-install-recommends --no-install-suggests -y ca-certificates git \
-  build-essential libssl-dev libpcre2-dev curl pkg-config libcurl4-openssl-dev \
-# Prepare dirs, group, and user
+    build-essential libssl-dev libpcre2-dev curl pkg-config libcurl4-openssl-dev \
+# Prepare dirs, groups, and users
   && mkdir -p \
     $bin_dir \
     $UNIT_SBIN_DIR \
@@ -113,13 +115,6 @@ RUN --mount=type=secret,id=vzw_secrets.h set -x \
     $log_dir \
     $UNIT_RUN_STATE_DIR \
     $tmp_dir \
-    $app_firmware_dir \
-    $app_src_dir \
-    $app_include_dir \
-    $app_lib_dir \
-    $app_clone_dir/config \
-    $app_clone_dir/modules/jsmn \
-    $app_clone_dir/modules/nibble-and-a-half \
   && mkdir -p -m=700 $lib_state_dir \
   && groupadd --gid 999 $unit_group \
   && groupadd --gid 1000 $app_group \
@@ -136,13 +131,13 @@ RUN --mount=type=secret,id=vzw_secrets.h set -x \
     --gid $app_group \
     --no-create-home \
     --home /nonexistent \
-    --comment "iot server app user" \
+    --comment "loft server user" \
     --shell /bin/false \
     $app_user \
   && chown root:$app_group $app_firmware_dir \
   && chmod -R 775 $app_firmware_dir \
 # Clone NGINX Unit
-  && git clone --depth 1 -b 1.32.1-1 https://github.com/nginx/unit $unit_clone_dir \
+  && git clone --depth 1 -b $nginx_unit_version $nginx_unit_link $unit_clone_dir \
 # Configure and make unitd
   && cd $unit_clone_dir \
   && ./configure $unit_config_args --cc-opt="$(eval $cc_opt)" --ld-opt="$(eval $ld_opt)" \
@@ -153,8 +148,6 @@ RUN --mount=type=secret,id=vzw_secrets.h set -x \
   && ln -sf /dev/stdout "$log_file" \
 # Make libunit.a
   && make -j $(eval $ncpu) libunit-install \
-# Add nxt_clang.h to include location
-  && cp ./src/nxt_clang.h $include_dir/. \
 # Save/apt-mark unitd dependencies
   && cd \
   && savedAptMark="$(apt-mark showmanual)" \
@@ -166,16 +159,14 @@ RUN --mount=type=secret,id=vzw_secrets.h set -x \
   && /bin/true \
   && apt-get update \
   && apt-get --no-install-recommends --no-install-suggests -y install $(cat /requirements.apt) \
-# Compile and link C app against libunit.a
+# Compile and link Loft
   && cd $app_clone_dir \
-  && cp /run/secrets/vzw_secrets.h config/vzw_secrets.h \
-  && make -j $(eval $ncpu) \
-  && make install \
+  && cp /run/secrets/vzw_secrets.h "$app_clone_dir"/config/vzw_secrets.h \
+  && make -j $(eval $ncpu) CC=gcc EXTRA_CFLAGS=-std=gnu2x \
+  && make install INSTALL_BIN_PATH="$bin_dir" \
 # Cleanup
-  && rm -f config/vzw_secrets.h \
+  && rm -rf "$src_dir" \
   && apt-get purge -y --auto-remove build-essential \
-  && rm -rf $unit_clone_dir \
-  && rm -rf $app_clone_dir \
   && rm -rf /var/lib/apt/lists/* \
   && rm -f /requirements.apt
 
